best_try_and_best_chance

--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -114,4 +114,22 @@
 
 ** 求取从 1 到 1000 的所有数的平均数
 
+#+begin_src csx
+  int sum = 0;
+  int n = 1000;
+
+  for (int i = 1; i <= 1000; i++)
+  {
+      sum = sum + i;
+  }
+
+  double avg = sum / (double)n; // 平均数 = 和 ÷ 个数
+  
+  Console.WriteLine($"他们的和是 {sum}, 平均数是 {avg}");
+#+end_src
+
+#+RESULTS:
+| 他们的和是 500500 | 平均数是 500.5 |
+
+
 ** 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值
