--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -145,3 +145,31 @@
 
 其他:
 - 如果有兴趣的同学，可以自行学习一下 Winform 应用的创建，尝试使用窗口的方式将这个功能实现一下
+
+* 练习题备忘
+** 求取 BMI 的值
+
+基本实现:
+#+begin_src csharp
+  static void Main(string[] args)
+  {
+      Console.WriteLine("欢迎使用 BMI 计算器！\n");
+      // 获取身高:
+      // 1）通过 Console.ReadLine 方法读取用户输入，结果是一个字符串
+      // 2) 通过 double.Parse 方法可以将字符串转换为 double 类型
+      Console.Write("请输入您的身高（单位：米）: ");
+      double shengao = double.Parse(Console.ReadLine());
+      // 获取体重:
+      Console.Write("请输入您的体重（单位：千克）: ");
+      double tizhong = double.Parse(Console.ReadLine());
+
+      // 通过 shengao/tizhong 来求取 BMI 值
+      // 计算公式: 体重/身高^2
+      double bmi = tizhong / (shengao * shengao);
+
+      // 输出 BMI
+      // 通过变量，存储中间数据
+      // 通过字符串拼接+Console.WriteLine 反馈给用户
+      Console.WriteLine($"\n您的身高是 {shengao}，您的体重是 {tizhong}，您的 Bmi 为 {bmi}");
+  }
+#+end_src
