--- a/.src/.sitemap.org
+++ b/.src/.sitemap.org
@@ -4,9 +4,9 @@
 - 190
   - [[file:190/index.org][190]]
 - 191
-  - [[file:191/index.org][Report of 191]]
+  - [[file:191/index.org][191]]
 - 192
-  - [[file:192/index.org][Report of 192]]
+  - [[file:192/index.org][192]]
 - vvv
   - [[file:vvv/1-csharp.org][C♯ 语言]]
   - [[file:vvv/9-windows.org][Windows]]
