--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -91,9 +91,8 @@
 
 * 练习题备忘
 ** 循环和条件判断
-*** 打印从 1 到 1000 的所有数
 
-{{{details(答案仅供参考)}}}
+{{{details(打印从 1 到 1000 的所有数)}}}
 
 #+begin_src csx -n
   for (int i = 1; i <= 1000; i++)
@@ -104,9 +103,7 @@
 
 {{{details(/)}}}
 
-*** 求取从 1 到 1000 的所有数的和
-
-{{{details(答案仅供参考)}}}
+{{{details(求取从 1 到 1000 的所有数的和)}}}
 
 #+begin_src csx -n
   int sum = 0;
@@ -122,9 +119,7 @@
 
 {{{details(/)}}}
 
-*** 求取从 1 到 1000 的所有数的平均数
-
-{{{details(答案仅供参考)}}}
+{{{details(求取从 1 到 1000 的所有数的平均数)}}}
 
 #+begin_src csx -n
   int sum = 0;
@@ -145,9 +140,7 @@
 
 {{{details(/)}}}
 
-*** 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值
-
-{{{details(答案仅供参考)}}}
+{{{details(求取 int[] numbers = {1，2，3，4，5，6，7，8，9，10} 的平均值)}}}
 
 #+begin_src csx -n
   int[] numbers = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
