--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -92,8 +92,8 @@
 * 练习题备忘
 ** 循环和条件判断
 - 打印从 1 到 1000 的所有数
-
-  {{{details(参考答案, sumopc)}}}
+  
+  {{{details(参考答案, act1)}}}
   
   #+begin_src csx -n
     for (int i = 1; i <= 1000; i++)
@@ -103,9 +103,10 @@
   #+end_src
   
   {{{details(/)}}}
+  
 - 求取从 1 到 1000 的所有数的和
-
-  {{{details(参考答案, sumopc)}}}
+  
+  {{{details(参考答案, act1)}}}
 
   #+begin_src csx -n
     int sum = 0;
@@ -120,9 +121,10 @@
   : 他们的和是 500500
   
   {{{details(/)}}}
+  
 - 求取从 1 到 1000 的所有数的平均数
   
-  {{{details(参考答案, sumopc)}}}
+  {{{details(参考答案, act1)}}}
   
   #+begin_src csx -n
     int sum = 0;
@@ -142,9 +144,10 @@
   | 他们的和是 500500 | 平均数是 500.5 |
   
   {{{details(/)}}}
+  
 - 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值
   
-  {{{details(参考答案, sumopt)}}}
+  {{{details(参考答案, act1)}}}
   
   #+begin_src csx -n
     int[] numbers = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
