--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -91,7 +91,10 @@
 
 * 练习题备忘
 ** 循环和条件判断
-- 打印从 1 到 1000 的所有数
+:PROPERTIES:
+:LEVEL: 5
+:END:
+*** 打印从 1 到 1000 的所有数
   
   {{{details(参考答案, act1)}}}
   
@@ -104,7 +107,7 @@
   
   {{{details(/)}}}
   
-- 求取从 1 到 1000 的所有数的和
+*** 求取从 1 到 1000 的所有数的和
   
   {{{details(参考答案, act1)}}}
 
@@ -122,7 +125,7 @@
   
   {{{details(/)}}}
   
-- 求取从 1 到 1000 的所有数的平均数
+*** 求取从 1 到 1000 的所有数的平均数
   
   {{{details(参考答案, act1)}}}
   
@@ -145,7 +148,7 @@
   
   {{{details(/)}}}
   
-- 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值
+*** 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值
   
   {{{details(参考答案, act1)}}}
   
