--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -94,78 +94,79 @@
 :PROPERTIES:
 :LEVEL: 5
 :END:
+
 *** 打印从 1 到 1000 的所有数
   
-  {{{details(参考答案, act1)}}}
-  
-  #+begin_src csx -n
-    for (int i = 1; i <= 1000; i++)
-    {
-        Console.WriteLine(i);
-    }
-  #+end_src
-  
-  {{{details(/)}}}
+{{{details(参考答案)}}}
+
+#+begin_src csx -n
+  for (int i = 1; i <= 1000; i++)
+  {
+      Console.WriteLine(i);
+  }
+#+end_src
+
+{{{details(/)}}}
   
 *** 求取从 1 到 1000 的所有数的和
   
-  {{{details(参考答案, act1)}}}
+{{{details(参考答案)}}}
 
-  #+begin_src csx -n
-    int sum = 0;
-    for (int i = 1; i <= 1000; i++)
-    {
-        sum = sum + i;
-    }
-    Console.WriteLine($"他们的和是 {sum}");
-  #+end_src
-  
-  #+RESULTS:
-  : 他们的和是 500500
-  
-  {{{details(/)}}}
+#+begin_src csx -n
+  int sum = 0;
+  for (int i = 1; i <= 1000; i++)
+  {
+      sum = sum + i;
+  }
+  Console.WriteLine($"他们的和是 {sum}");
+#+end_src
+
+#+RESULTS:
+: 他们的和是 500500
+
+{{{details(/)}}}
   
 *** 求取从 1 到 1000 的所有数的平均数
   
-  {{{details(参考答案, act1)}}}
+{{{details(参考答案)}}}
+
+#+begin_src csx -n
+  int sum = 0;
+  int n = 1000;
+
+  for (int i = 1; i <= 1000; i++)
+  {
+      sum = sum + i;
+  }
+
+  double avg = sum / (double)n; // 平均数 = 和 ÷ 个数
   
-  #+begin_src csx -n
-    int sum = 0;
-    int n = 1000;
-  
-    for (int i = 1; i <= 1000; i++)
-    {
-        sum = sum + i;
-    }
-  
-    double avg = sum / (double)n; // 平均数 = 和 ÷ 个数
-    
-    Console.WriteLine($"他们的和是 {sum}, 平均数是 {avg}");
-  #+end_src
-  
-  #+RESULTS:
-  | 他们的和是 500500 | 平均数是 500.5 |
-  
-  {{{details(/)}}}
+  Console.WriteLine($"他们的和是 {sum}, 平均数是 {avg}");
+#+end_src
+
+#+RESULTS:
+| 他们的和是 500500 | 平均数是 500.5 |
+
+{{{details(/)}}}
   
 *** 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值
   
-  {{{details(参考答案, act1)}}}
-  
-  #+begin_src csx -n
-    int[] numbers = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
-  
-    int sum = 0;
-    int n = numbers.Length;
-  
-    foreach (int i in numbers)
-    {
-        sum = sum + i;
-    }
-  
-    double avg = (double) sum / n; // 平均数 = 和 ÷ 个数
-  
-    Console.WriteLine($"他们的和是 {sum}, 平均数是 {avg}");
-  #+end_src
-  
-  {{{details(/)}}}
+{{{details(参考答案)}}}
+
+#+begin_src csx -n
+  int[] numbers = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
+
+  int sum = 0;
+  int n = numbers.Length;
+
+  foreach (int i in numbers)
+  {
+      sum = sum + i;
+  }
+
+  double avg = (double) sum / n; // 平均数 = 和 ÷ 个数
+
+  Console.WriteLine($"他们的和是 {sum}, 平均数是 {avg}");
+#+end_src
+
+{{{details(/)}}}
