--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -3,10 +3,13 @@
 
 * 信息
 
-- 学习委员: 黄军帮
+班长: 林俊贤
 
+学习委员: 黄军帮
 
-|     1 |     2 |     3 |     4 |     5 |   6 |
+组长:
+|      1 |      2 |      3 |      4 |      5 |    6 |
+|--------+--------+--------+--------+--------+------|
 | 吴嘉城 | 曾宏燊 | 杨耀嘉 | 刘仁杰 | 林俊贤 | 杨富 |
 
 * 结果
