--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -4,9 +4,9 @@
 
 * 班级信息
 
-- 课代表: 曾凯
+课代表: 曾凯
 
-* 测验
+* 测验备忘
 
 #+NAME: rs
 | 组 | 姓名   | 2023-09-11 | 2023-10-30 | 2023-12-25 |
@@ -91,9 +91,6 @@
 
 * 练习题备忘
 ** 循环和条件判断
-:PROPERTIES:
-:level: 5
-:END:
 *** 打印从 1 到 1000 的所有数
   
 {{{details(参考答案)}}}
