--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -1,12 +1,11 @@
 #+TITLE: 191
 
 
-
 * 班级信息
 
 课代表: 曾凯
 
-* 测验备忘
+* 测验结果
 
 #+NAME: rs
 | 组 | 姓名   | 2023-09-11 | 2023-10-30 | 2023-12-25 |
@@ -41,6 +40,8 @@
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
 - 2023-12-25, 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方
 
+* 期末分数 (2024.1.15)
+
 # #+begin_src elisp :var tb=rs
 #   (cl-loop for i in tb
 #            for f1 = (if (numberp (nth 2 i)) (- 101 (nth 2 i)) 60)
@@ -49,7 +50,6 @@
 #            collect (list 0 (nth 1 i) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))))
 # #+end_src
 
-期末分数 (2024.1.15):
 | No. | Name  | Test1 | Test2 | Test3 | Final |
 |-----+-------+-------+-------+-------+-------|
 |   1 | 陈嘉鹏 |   100 |    99 |    99 |    99 |
@@ -79,7 +79,7 @@
 
 
 
-* 寒假作业 (2024-01-15)
+* 寒假作业 (2024.1.15)
 
 完成下面图示的题目:
 
