--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -60,6 +60,8 @@
 - 2023-10-31, 创建类 PLC，描述设备的基本信息并添加基本控制
 - 2023-12-26, 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 
+* 期末成绩 (2024-01-16)
+
 # #+begin_src elisp :var tb=rs
 #   (cl-loop with fn =
 #            (lambda (line n)
@@ -76,7 +78,6 @@
 #                      collect (cons i line))))
 # #+end_src
 
-期末考试成绩 (2024-01-16):
 | 名次 | 名字   | Test1 | Test2 | Test3 | Final |
 |-----+-------+-------+-------+-------+-------|
 |   1 | 段文潇 |    99 |   100 |    99 |    99 |
