best_try_and_best_chance

--- a/.src/index.org
+++ b/.src/index.org
@@ -23,8 +23,8 @@
 #+HTML_HEAD: .title {color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体}
 #+HTML_HEAD: </style>
 
-# #+HTML: <h2 style="color: red; font-weight: bold; text-shadow: 0 0 1px #ee0000"><img style="width: 98%" src="/asset/dream.png"></h4>
-#+HTML: <h3 class="title">Happy Happy</h3>
+#+HTML: <h2 style="color: red; font-weight: bold; text-shadow: 0 0 1px #ee0000"><img style="width: 98%" src="/asset/dream.png"></h4>
+# #+HTML: <h3 class="title">Happy Happy</h3>
 
 #+HTML: <div id="main">
 
