--- a/.src/index.org
+++ b/.src/index.org
@@ -1,4 +1,4 @@
-#+TITLE: AIT.NET
+# #+TITLE: AIT.NET
 
 #+HTML_HEAD: <meta http-equiv="Cache-Control" content="no-store">
 #+HTML_HEAD: <link rel="stylesheet" href="/asset/common.css?89121">
@@ -19,6 +19,7 @@
 #+HTML_HEAD:   #main aside { font-size: 1em; }
 #+HTML_HEAD:   #main aside > ol { display: flex; flex-flow: row wrap; width: 368px; box-shadow: 0 0 10px #eee; padding: 20px 0 20px 20px; margin-top: -4em; }
 #+HTML_HEAD:   #main aside > ol > li { margin-bottom: 1em; width: 150px; }
+#+HTML_HEAD:  li, h3 { font-family: 宋体; font-size: 1.5em } a { text-decoration: none; }
 #+HTML_HEAD: }
 #+HTML_HEAD: .title {color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体}
 #+HTML_HEAD: </style>
