--- a/.src/index.org
+++ b/.src/index.org
@@ -12,7 +12,7 @@
 #+HTML_HEAD:   #content > .org-ul > li > ul:first-child { margin-top: 1em; }
 #+HTML_HEAD: }
 #+HTML_HEAD: @media (min-width: 768px) {
-#+HTML_HEAD:   body { background: white; line-height: 1.4; font-family: 宋体; font-size: 30px; font-weight: 600 }
+#+HTML_HEAD:   body { background: white; line-height: 1.4; } body, h2, h3, p { font-family: 宋体; font-size: 30px; font-weight: 600 }
 #+HTML_HEAD:   #content { margin-left: auto; margin-right: auto; padding-left: 50px; }
 #+HTML_HEAD:   #postamble { display: none; }
 #+HTML_HEAD:   #main {display: grid; grid-gap: 20px; grid-template-columns: 2fr auto;}
