best_try_and_best_chance

--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -40,45 +40,6 @@
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
 - 2023-12-25, 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方
 
-* 期末分数 (2024.1.15)
-
-# #+begin_src elisp :var tb=rs
-#   (cl-loop for i in tb
-#            for f1 = (if (numberp (nth 2 i)) (- 101 (nth 2 i)) 60)
-#            for f2 = (if (numberp (nth 3 i)) (- 101 (nth 3 i)) 60)
-#            for f3 = (if (numberp (nth 4 i)) (- 101 (nth 4 i)) 60)
-#            collect (list 0 (nth 1 i) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))))
-# #+end_src
-
-| No. | Name  | Test1 | Test2 | Test3 | Final |
-|-----+-------+-------+-------+-------+-------|
-|   1 | 陈嘉鹏 |   100 |    99 |    99 |    99 |
-|   2 | 覃宇江 |    95 |    97 |    98 |    97 |
-|   3 | 唐瑞钦 |    94 |   100 |    93 |    96 |
-|   4 | 刘志豪 |    88 |    98 |   100 |    95 |
-|   5 | 韦海永 |    87 |    96 |    95 |    93 |
-|   6 | 曾世强 |    93 |    95 |    92 |    93 |
-|   7 | 刘宁   |    98 |    93 |    89 |    93 |
-|   8 | 吴志挥 |    84 |    91 |    97 |    91 |
-|   9 | 刘燃东 |    91 |    83 |    96 |    90 |
-|  10 | 黄佳鹏 |    96 |    87 |    87 |    90 |
-|  11 | 张翔宇 |    85 |    90 |    91 |    89 |
-|  12 | 魏智锋 |    92 |    88 |    86 |    89 |
-|  13 | 秦铭杉 |    97 |    86 |    84 |    89 |
-|  14 | 李境松 |    89 |    85 |    90 |    88 |
-|  15 | 叶子超 |    86 |    92 |    81 |    86 |
-|  16 | 陈述亮 |    90 |    84 |    79 |    84 |
-|  17 | 潘嘉豪 |    60 |    95 |    94 |    83 |
-|  18 | 廖哲   |    99 |    82 |    60 |    80 |
-|  19 | 曾凯   |    60 |    89 |    82 |    77 |
-|  20 | 刁扬春 |    82 |    60 |    83 |    75 |
-|  21 | 岑宇森 |    60 |    81 |    80 |    74 |
-|  22 | 陈子健 |    83 |    60 |    78 |    74 |
-|  23 | 林宝荣 |    60 |    60 |    88 |    69 |
-|  24 | 朱荣如 |    60 |    60 |    85 |    68 |
-
-
-
 * 寒假作业 (2024.1.15)
 
 完成下面图示的题目:
@@ -183,3 +144,43 @@
    - 请做好笔记，请准备好U盘
    - 记住网址 https://freelazy.github.io/191
    - 根据上述网址上的记录，对以前学习的代码: 练!练!!练!!!
+
+** 2024-01-15 期末分数
+
+# #+begin_src elisp :var tb=rs
+#   (cl-loop for i in tb
+#            for f1 = (if (numberp (nth 2 i)) (- 101 (nth 2 i)) 60)
+#            for f2 = (if (numberp (nth 3 i)) (- 101 (nth 3 i)) 60)
+#            for f3 = (if (numberp (nth 4 i)) (- 101 (nth 4 i)) 60)
+#            collect (list 0 (nth 1 i) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))))
+# #+end_src
+
+| No. | Name  | Test1 | Test2 | Test3 | Final |
+|-----+-------+-------+-------+-------+-------|
+|   1 | 陈嘉鹏 |   100 |    99 |    99 |    99 |
+|   2 | 覃宇江 |    95 |    97 |    98 |    97 |
+|   3 | 唐瑞钦 |    94 |   100 |    93 |    96 |
+|   4 | 刘志豪 |    88 |    98 |   100 |    95 |
+|   5 | 韦海永 |    87 |    96 |    95 |    93 |
+|   6 | 曾世强 |    93 |    95 |    92 |    93 |
+|   7 | 刘宁   |    98 |    93 |    89 |    93 |
+|   8 | 吴志挥 |    84 |    91 |    97 |    91 |
+|   9 | 刘燃东 |    91 |    83 |    96 |    90 |
+|  10 | 黄佳鹏 |    96 |    87 |    87 |    90 |
+|  11 | 张翔宇 |    85 |    90 |    91 |    89 |
+|  12 | 魏智锋 |    92 |    88 |    86 |    89 |
+|  13 | 秦铭杉 |    97 |    86 |    84 |    89 |
+|  14 | 李境松 |    89 |    85 |    90 |    88 |
+|  15 | 叶子超 |    86 |    92 |    81 |    86 |
+|  16 | 陈述亮 |    90 |    84 |    79 |    84 |
+|  17 | 潘嘉豪 |    60 |    95 |    94 |    83 |
+|  18 | 廖哲   |    99 |    82 |    60 |    80 |
+|  19 | 曾凯   |    60 |    89 |    82 |    77 |
+|  20 | 刁扬春 |    82 |    60 |    83 |    75 |
+|  21 | 岑宇森 |    60 |    81 |    80 |    74 |
+|  22 | 陈子健 |    83 |    60 |    78 |    74 |
+|  23 | 林宝荣 |    60 |    60 |    88 |    69 |
+|  24 | 朱荣如 |    60 |    60 |    85 |    68 |
+
+
+
