best_try_and_best_chance

--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -40,16 +40,6 @@
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
 - 2023-12-25, 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方
 
-* 寒假作业 (2024.1.15)
-
-完成下面图示的题目:
-
-[[file:img/191-3338282.png]]
-
-补充:
-- 其中第 3 题的进阶题目是：请用循环的方式，输出 99 乘法表。有兴趣的同学请尝试
-- 请大家酌情预习 Winform 相关内容
-
 * 练习题备忘
 ** 循环和条件判断
 *** 打印从 1 到 1000 的所有数
@@ -144,6 +134,16 @@
    - 请做好笔记，请准备好U盘
    - 记住网址 https://freelazy.github.io/191
    - 根据上述网址上的记录，对以前学习的代码: 练!练!!练!!!
+
+** 2024-01-15 寒假作业
+
+完成下面图示的题目:
+
+[[file:img/191-3338282.png]]
+
+补充:
+- 其中第 3 题的进阶题目是：请用循环的方式，输出 99 乘法表。有兴趣的同学请尝试
+- 请大家酌情预习 Winform 相关内容
 
 ** 2024-01-15 期末分数
 
