best_try_and_best_chance

--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -120,7 +120,7 @@
 
 *** 在控制台上，输出 99 乘法表
 :PROPERTIES:
-:tpl: <div><details><summary>参考答案</summary>%s</details></div>
+:tpl: <details><summary>参考答案</summary>%s</details>
 :END:
 
 TODO111
