--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -6,7 +6,7 @@
 - 班主任: 朱良斌
 - 课代表: 许焕圣
 
-* 测验结果
+* 测验
 
 #+NAME: rs
 | G | 姓名   | 2023-09-06 | 2023-10-31 | 2023-12-26 |
@@ -60,78 +60,7 @@
 - 2023-10-31, 创建类 PLC，描述设备的基本信息并添加基本控制
 - 2023-12-26, 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 
-* 期末成绩 (2024-01-16)
-
-# #+begin_src elisp :var tb=rs
-#   (cl-loop with fn =
-#            (lambda (line n)
-#              (let ((f (nth n line))) (if (numberp f) (max 60 (- 101 f)) (if (> (length f) 0) 70 60))))
-#            for line in tb
-#            for f1 = (funcall fn line 2)
-#            for f2 = (funcall fn line 3)
-#            for f3 = (funcall fn line 4)
-#            collect (list (nth 1 line) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))) into rs
-#            finally
-#            (return
-#             (cl-loop for i from 1
-#                      for line in (cl-sort rs (lambda (x y) (> (nth 4 x) (nth 4 y))))
-#                      collect (cons i line))))
-# #+end_src
-
-| 名次 | 名字   | Test1 | Test2 | Test3 | Final |
-|-----+-------+-------+-------+-------+-------|
-|   1 | 段文潇 |    99 |   100 |    99 |    99 |
-|   2 | 李吉   |   100 |    89 |   100 |    96 |
-|   3 | 许焕圣 |    94 |    95 |    97 |    95 |
-|   4 | 高旻昱 |    96 |    97 |    93 |    95 |
-|   5 | 古远东 |    83 |    93 |    96 |    91 |
-|   6 | 肖义珥 |    91 |    90 |    92 |    91 |
-|   7 | 何华为 |    93 |    94 |    87 |    91 |
-|   8 | 刘广鸿 |    90 |    98 |    86 |    91 |
-|   9 | 黄可彬 |    82 |    92 |    95 |    90 |
-|  10 | 张甘霖 |    86 |    96 |    79 |    87 |
-|  11 | 余海中 |    98 |    84 |    78 |    87 |
-|  12 | 谭鑫   |    97 |    88 |    77 |    87 |
-|  13 | 段京文 |    84 |    83 |    91 |    86 |
-|  14 | 黄飞超 |    70 |    87 |    98 |    85 |
-|  15 | 段文锋 |    88 |    99 |    67 |    85 |
-|  16 | 刘虹佑 |    87 |    70 |    89 |    82 |
-|  17 | 李泽俊 |    70 |    86 |    84 |    80 |
-|  18 | 麦天河 |    95 |    70 |    75 |    80 |
-|  19 | 韦金良 |    70 |    85 |    83 |    79 |
-|  20 | 贝俊霖 |    70 |    70 |    94 |    78 |
-|  21 | 陈颖聪 |    70 |    91 |    72 |    78 |
-|  22 | 郭榕荣 |    70 |    70 |    90 |    77 |
-|  23 | 梁泽文 |    70 |    70 |    88 |    76 |
-|  24 | 李耀武 |    70 |    80 |    76 |    75 |
-|  25 | 王海波 |    92 |    60 |    73 |    75 |
-|  26 | 陈梓鑫 |    70 |    70 |    81 |    74 |
-|  27 | 吴幸林 |    70 |    60 |    85 |    72 |
-|  28 | 张桂毓 |    70 |    82 |    63 |    72 |
-|  29 | 苏大明 |    70 |    60 |    82 |    71 |
-|  30 | 唐景富 |    70 |    70 |    74 |    71 |
-|  31 | 刘翔   |    89 |    60 |    65 |    71 |
-|  32 | 刘泽泉 |    70 |    81 |    62 |    71 |
-|  33 | 叶宇   |    70 |    60 |    80 |    70 |
-|  34 | 谢晓中 |    70 |    70 |    71 |    70 |
-|  35 | 陆宇轩 |    70 |    70 |    66 |    69 |
-|  36 | 李岳元 |    85 |    60 |    61 |    69 |
-|  37 | 周永久 |    70 |    70 |    64 |    68 |
-|  38 | 饶展源 |    70 |    60 |    71 |    67 |
-|  39 | 何晓东 |    70 |    70 |    60 |    67 |
-|  40 | 沈艺宏 |    70 |    60 |    69 |    66 |
-|  41 | 薛进超 |    70 |    60 |    68 |    66 |
-|  42 | 卢德涛 |    70 |    70 |    60 |    66 |
-|  43 | 岑法政 |    60 |    60 |    60 |    60 |
-
-
-* 寒假作业 (2024-01-16)
-
-C/S架构编程，做完第一章所有的上机题:
-- 可选项，其他题也做
-- 如果任务不饱和，可酌情做一下第二章
-
-* 知识点备忘
+* 知识点
 ** 将 string 转换为 double 有哪些方式?
 
 在 C# 中，转换 string 为 double 的方式主要有三种:
@@ -186,7 +115,7 @@ C/S架构编程，做完第一章所有的上机题:
   
   事实上 =Convert.ToDouble= 方法在内部使用的也是 =double.Parse= ，因此如果转换失败，它将抛出一个异常。
 
-* 练习题备忘
+* 练习题
 ** 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG
 
 #+begin_src csharp
@@ -267,4 +196,76 @@ C/S架构编程，做完第一章所有的上机题:
 {{{details(点击查看答案，仅供参考)}}}
 TODO
 {{{details(/)}}}
+
+* Logbook
+** 2024-01-16 期末成绩
+
+# #+begin_src elisp :var tb=rs
+#   (cl-loop with fn =
+#            (lambda (line n)
+#              (let ((f (nth n line))) (if (numberp f) (max 60 (- 101 f)) (if (> (length f) 0) 70 60))))
+#            for line in tb
+#            for f1 = (funcall fn line 2)
+#            for f2 = (funcall fn line 3)
+#            for f3 = (funcall fn line 4)
+#            collect (list (nth 1 line) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))) into rs
+#            finally
+#            (return
+#             (cl-loop for i from 1
+#                      for line in (cl-sort rs (lambda (x y) (> (nth 4 x) (nth 4 y))))
+#                      collect (cons i line))))
+# #+end_src
+
+| 名次 | 名字   | Test1 | Test2 | Test3 | Final |
+|-----+-------+-------+-------+-------+-------|
+|   1 | 段文潇 |    99 |   100 |    99 |    99 |
+|   2 | 李吉   |   100 |    89 |   100 |    96 |
+|   3 | 许焕圣 |    94 |    95 |    97 |    95 |
+|   4 | 高旻昱 |    96 |    97 |    93 |    95 |
+|   5 | 古远东 |    83 |    93 |    96 |    91 |
+|   6 | 肖义珥 |    91 |    90 |    92 |    91 |
+|   7 | 何华为 |    93 |    94 |    87 |    91 |
+|   8 | 刘广鸿 |    90 |    98 |    86 |    91 |
+|   9 | 黄可彬 |    82 |    92 |    95 |    90 |
+|  10 | 张甘霖 |    86 |    96 |    79 |    87 |
+|  11 | 余海中 |    98 |    84 |    78 |    87 |
+|  12 | 谭鑫   |    97 |    88 |    77 |    87 |
+|  13 | 段京文 |    84 |    83 |    91 |    86 |
+|  14 | 黄飞超 |    70 |    87 |    98 |    85 |
+|  15 | 段文锋 |    88 |    99 |    67 |    85 |
+|  16 | 刘虹佑 |    87 |    70 |    89 |    82 |
+|  17 | 李泽俊 |    70 |    86 |    84 |    80 |
+|  18 | 麦天河 |    95 |    70 |    75 |    80 |
+|  19 | 韦金良 |    70 |    85 |    83 |    79 |
+|  20 | 贝俊霖 |    70 |    70 |    94 |    78 |
+|  21 | 陈颖聪 |    70 |    91 |    72 |    78 |
+|  22 | 郭榕荣 |    70 |    70 |    90 |    77 |
+|  23 | 梁泽文 |    70 |    70 |    88 |    76 |
+|  24 | 李耀武 |    70 |    80 |    76 |    75 |
+|  25 | 王海波 |    92 |    60 |    73 |    75 |
+|  26 | 陈梓鑫 |    70 |    70 |    81 |    74 |
+|  27 | 吴幸林 |    70 |    60 |    85 |    72 |
+|  28 | 张桂毓 |    70 |    82 |    63 |    72 |
+|  29 | 苏大明 |    70 |    60 |    82 |    71 |
+|  30 | 唐景富 |    70 |    70 |    74 |    71 |
+|  31 | 刘翔   |    89 |    60 |    65 |    71 |
+|  32 | 刘泽泉 |    70 |    81 |    62 |    71 |
+|  33 | 叶宇   |    70 |    60 |    80 |    70 |
+|  34 | 谢晓中 |    70 |    70 |    71 |    70 |
+|  35 | 陆宇轩 |    70 |    70 |    66 |    69 |
+|  36 | 李岳元 |    85 |    60 |    61 |    69 |
+|  37 | 周永久 |    70 |    70 |    64 |    68 |
+|  38 | 饶展源 |    70 |    60 |    71 |    67 |
+|  39 | 何晓东 |    70 |    70 |    60 |    67 |
+|  40 | 沈艺宏 |    70 |    60 |    69 |    66 |
+|  41 | 薛进超 |    70 |    60 |    68 |    66 |
+|  42 | 卢德涛 |    70 |    70 |    60 |    66 |
+|  43 | 岑法政 |    60 |    60 |    60 |    60 |
+
+
+** 2024-01-16 寒假作业
+
+C/S架构编程，做完第一章所有的上机题:
+- 可选项，其他题也做
+- 如果任务不饱和，可酌情做一下第二章
 
