best_try_and_best_chance

--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -116,10 +116,17 @@ Winform 项目，VS 界面:
 | 48 | 魏坤   |    70 |    60 |    60 |    63 |
 | 49 | 黄萧   |    70 |    60 |    60 |    63 |
 
+** 2023-09-07 (任务)
+:PROPERTIES:
+:ID:       20240311T094631.484054
+:END:
+
+01-张三.txt, 创建源文件、编写代码、编译、运行
+
 * 任务
 
 #+NAME: rs
-| G | 姓名   | 2023-09-07 | 2023-10-30 | 2023-12-28 |
+| G | 姓名   | [[id:20240311T094631.484054][2023-09-07]] | 2023-10-30 | 2023-12-28 |
 |---+-------+------------+------------+------------|
 | 2 | 甘成杰 |          2 |          1 |          1 |
 | 3 | 官名福 |         15 |         12 |          2 |
