--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -116,6 +116,22 @@ Winform 项目，VS 界面:
 | 48 | 魏坤   |    70 |    60 |    60 |    63 |
 | 49 | 黄萧   |    70 |    60 |    60 |    63 |
 
+** 2023-12-28 (任务)
+:PROPERTIES:
+:ID:       20240311T094931.791352
+:END:
+
+使用控制台实现点名的功能。
+
+[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]
+
+** 2023-10-30 (任务)
+:PROPERTIES:
+:ID:       20240311T094909.989622
+:END:
+
+创建类 Device，描述设备的基本信息并添加基本控制
+
 ** 2023-09-07 (任务)
 :PROPERTIES:
 :ID:       20240311T094631.484054
@@ -123,10 +139,10 @@ Winform 项目，VS 界面:
 
 01-张三.txt, 创建源文件、编写代码、编译、运行
 
-* 任务
+* 任务结果
 
 #+NAME: rs
-| G | 姓名   | [[id:20240311T094631.484054][2023-09-07]] | 2023-10-30 | 2023-12-28 |
+| G | 姓名   | [[id:20240311T094631.484054][2023-09-07]] | [[id:20240311T094909.989622][2023-10-30]] | [[id:20240311T094931.791352][2023-12-28]] |
 |---+-------+------------+------------+------------|
 | 2 | 甘成杰 |          2 |          1 |          1 |
 | 3 | 官名福 |         15 |         12 |          2 |
@@ -177,10 +193,3 @@ Winform 项目，VS 界面:
 | 2 | 肖峰   |          - |            |            |
 | 3 | 魏坤   |          - |            |            |
 | 6 | 黄萧   |            |            |            |
-
-
-任务备注:
-- 2023-09-07, 01-张三.txt, 创建源文件、编写代码、编译、运行
-- 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
-- 2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]
-
