--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -3,59 +3,99 @@
 - 班主任: 朱良斌
 - 课代表: 许焕圣
 
-* 测验
+  
+* 笔记
+** 2024-01-16 (寒假作业)
 
-#+NAME: rs
-| G | 姓名   | 2023-09-06 | 2023-10-31 | 2023-12-26 |
-|---+-------+------------+------------+------------|
-| 4 | 李吉   | 1          |         12 |          1 |
-| 3 | 段文潇 | 2          |          1 |          2 |
-| 5 | 黄飞超 | -          |         14 |          3 |
-| 5 | 许焕圣 | 7          |          6 |          4 |
-| 5 | 古远东 | 18         |          8 |          5 |
-| 5 | 黄可彬 | 19         |          9 |          6 |
-| 4 | 贝俊霖 | -          |          - |          7 |
-| 2 | 高旻昱 | 5          |          4 |          8 |
-| 5 | 肖义珥 | 10         |         11 |          9 |
-| 6 | 段京文 | 17         |         18 |         10 |
-| 5 | 郭榕荣 | -          |          - |         11 |
-| 2 | 刘虹佑 | 14         |          - |         12 |
-| 5 | 梁泽文 | -          |          - |         13 |
-| 5 | 何华为 | 8          |          7 |         14 |
-| 3 | 刘广鸿 | 11         |          3 |         15 |
-| 1 | 吴幸林 | -          |            |         16 |
-| 3 | 李泽俊 | -          |         15 |         17 |
-| 5 | 韦金良 | -          |         16 |         18 |
-| 1 | 苏大明 | -          |            |         19 |
-| 4 | 陈梓鑫 | -          |          - |         20 |
-| 4 | 叶宇   | -          |            |         21 |
-| 3 | 张甘霖 | 15         |          5 |         22 |
-| 1 | 余海中 | 3          |         17 |         23 |
-| 1 | 谭鑫   | 4          |         13 |         24 |
-| 2 | 李耀武 | -          |         21 |         25 |
-| 2 | 麦天河 | 6          |          - |         26 |
-| 3 | 唐景富 | -          |          - |         27 |
-| 4 | 王海波 | 9          |            |         28 |
-| 3 | 陈颖聪 | -          |         10 |         29 |
-| 3 | 饶展源 | -          |            |         30 |
-| 4 | 谢晓中 | -          |          - |         30 |
-| 1 | 沈艺宏 | -          |            |         32 |
-| 3 | 薛进超 | -          |            |         33 |
-| 3 | 段文锋 | 13         |          2 |         34 |
-| 1 | 陆宇轩 | -          |          - |         35 |
-| 1 | 刘翔   | 12         |            |         36 |
-| 6 | 周永久 | -          |          - |         37 |
-| 6 | 张桂毓 | -          |         19 |         38 |
-| 6 | 刘泽泉 | -          |         20 |         39 |
-| 1 | 李岳元 | 16         |            |         40 |
-| 4 | 何晓东 | -          |          - |         41 |
-| 4 | 卢德涛 | -          |          - |         42 |
-| 2 | 岑法政 |            |            |            |
+C/S架构编程，做完第一章所有的上机题:
+- 可选项，其他题也做
+- 如果任务不饱和，可酌情做一下第二章
 
-任务详情:
-- 2023-09-06, 1.hello.txt, 完成从创建文件、编译到运行的整个过程
-- 2023-10-31, 创建类 PLC，描述设备的基本信息并添加基本控制
-- 2023-12-26, 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
+** 2024-01-16 (期末成绩)
+
+# #+begin_src elisp :var tb=rs
+#   (cl-loop with fn =
+#            (lambda (line n)
+#              (let ((f (nth n line))) (if (numberp f) (max 60 (- 101 f)) (if (> (length f) 0) 70 60))))
+#            for line in tb
+#            for f1 = (funcall fn line 2)
+#            for f2 = (funcall fn line 3)
+#            for f3 = (funcall fn line 4)
+#            collect (list (nth 1 line) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))) into rs
+#            finally
+#            (return
+#             (cl-loop for i from 1
+#                      for line in (cl-sort rs (lambda (x y) (> (nth 4 x) (nth 4 y))))
+#                      collect (cons i line))))
+# #+end_src
+
+| 名次 | 名字   | Test1 | Test2 | Test3 | Final |
+|-----+-------+-------+-------+-------+-------|
+|   1 | 段文潇 |    99 |   100 |    99 |    99 |
+|   2 | 李吉   |   100 |    89 |   100 |    96 |
+|   3 | 许焕圣 |    94 |    95 |    97 |    95 |
+|   4 | 高旻昱 |    96 |    97 |    93 |    95 |
+|   5 | 古远东 |    83 |    93 |    96 |    91 |
+|   6 | 肖义珥 |    91 |    90 |    92 |    91 |
+|   7 | 何华为 |    93 |    94 |    87 |    91 |
+|   8 | 刘广鸿 |    90 |    98 |    86 |    91 |
+|   9 | 黄可彬 |    82 |    92 |    95 |    90 |
+|  10 | 张甘霖 |    86 |    96 |    79 |    87 |
+|  11 | 余海中 |    98 |    84 |    78 |    87 |
+|  12 | 谭鑫   |    97 |    88 |    77 |    87 |
+|  13 | 段京文 |    84 |    83 |    91 |    86 |
+|  14 | 黄飞超 |    70 |    87 |    98 |    85 |
+|  15 | 段文锋 |    88 |    99 |    67 |    85 |
+|  16 | 刘虹佑 |    87 |    70 |    89 |    82 |
+|  17 | 李泽俊 |    70 |    86 |    84 |    80 |
+|  18 | 麦天河 |    95 |    70 |    75 |    80 |
+|  19 | 韦金良 |    70 |    85 |    83 |    79 |
+|  20 | 贝俊霖 |    70 |    70 |    94 |    78 |
+|  21 | 陈颖聪 |    70 |    91 |    72 |    78 |
+|  22 | 郭榕荣 |    70 |    70 |    90 |    77 |
+|  23 | 梁泽文 |    70 |    70 |    88 |    76 |
+|  24 | 李耀武 |    70 |    80 |    76 |    75 |
+|  25 | 王海波 |    92 |    60 |    73 |    75 |
+|  26 | 陈梓鑫 |    70 |    70 |    81 |    74 |
+|  27 | 吴幸林 |    70 |    60 |    85 |    72 |
+|  28 | 张桂毓 |    70 |    82 |    63 |    72 |
+|  29 | 苏大明 |    70 |    60 |    82 |    71 |
+|  30 | 唐景富 |    70 |    70 |    74 |    71 |
+|  31 | 刘翔   |    89 |    60 |    65 |    71 |
+|  32 | 刘泽泉 |    70 |    81 |    62 |    71 |
+|  33 | 叶宇   |    70 |    60 |    80 |    70 |
+|  34 | 谢晓中 |    70 |    70 |    71 |    70 |
+|  35 | 陆宇轩 |    70 |    70 |    66 |    69 |
+|  36 | 李岳元 |    85 |    60 |    61 |    69 |
+|  37 | 周永久 |    70 |    70 |    64 |    68 |
+|  38 | 饶展源 |    70 |    60 |    71 |    67 |
+|  39 | 何晓东 |    70 |    70 |    60 |    67 |
+|  40 | 沈艺宏 |    70 |    60 |    69 |    66 |
+|  41 | 薛进超 |    70 |    60 |    68 |    66 |
+|  42 | 卢德涛 |    70 |    70 |    60 |    66 |
+|  43 | 岑法政 |    60 |    60 |    60 |    60 |
+
+** 2023-12-26 (任务)
+:PROPERTIES:
+:ID:       20240311T095501.465594
+:END:
+
+使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
+
+** 2023-10-31 (任务)
+:PROPERTIES:
+:ID:       20240311T095521.767719
+:END:
+
+创建类 PLC，描述设备的基本信息并添加基本控制
+
+** 2023-09-06 (任务)
+:PROPERTIES:
+:ID:       20240311T095545.158503
+:END:
+
+1.hello.txt, 完成从创建文件、编译到运行的整个过程
+
 
 * 知识点
 ** 将 string 转换为 double 有哪些方式?
@@ -194,75 +234,52 @@
 TODO
 {{{details(/)}}}
 
-* Logbook
-** 2024-01-16 寒假作业
+* 测验结果
 
-C/S架构编程，做完第一章所有的上机题:
-- 可选项，其他题也做
-- 如果任务不饱和，可酌情做一下第二章
-
-** 2024-01-16 期末成绩
-
-# #+begin_src elisp :var tb=rs
-#   (cl-loop with fn =
-#            (lambda (line n)
-#              (let ((f (nth n line))) (if (numberp f) (max 60 (- 101 f)) (if (> (length f) 0) 70 60))))
-#            for line in tb
-#            for f1 = (funcall fn line 2)
-#            for f2 = (funcall fn line 3)
-#            for f3 = (funcall fn line 4)
-#            collect (list (nth 1 line) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))) into rs
-#            finally
-#            (return
-#             (cl-loop for i from 1
-#                      for line in (cl-sort rs (lambda (x y) (> (nth 4 x) (nth 4 y))))
-#                      collect (cons i line))))
-# #+end_src
-
-| 名次 | 名字   | Test1 | Test2 | Test3 | Final |
-|-----+-------+-------+-------+-------+-------|
-|   1 | 段文潇 |    99 |   100 |    99 |    99 |
-|   2 | 李吉   |   100 |    89 |   100 |    96 |
-|   3 | 许焕圣 |    94 |    95 |    97 |    95 |
-|   4 | 高旻昱 |    96 |    97 |    93 |    95 |
-|   5 | 古远东 |    83 |    93 |    96 |    91 |
-|   6 | 肖义珥 |    91 |    90 |    92 |    91 |
-|   7 | 何华为 |    93 |    94 |    87 |    91 |
-|   8 | 刘广鸿 |    90 |    98 |    86 |    91 |
-|   9 | 黄可彬 |    82 |    92 |    95 |    90 |
-|  10 | 张甘霖 |    86 |    96 |    79 |    87 |
-|  11 | 余海中 |    98 |    84 |    78 |    87 |
-|  12 | 谭鑫   |    97 |    88 |    77 |    87 |
-|  13 | 段京文 |    84 |    83 |    91 |    86 |
-|  14 | 黄飞超 |    70 |    87 |    98 |    85 |
-|  15 | 段文锋 |    88 |    99 |    67 |    85 |
-|  16 | 刘虹佑 |    87 |    70 |    89 |    82 |
-|  17 | 李泽俊 |    70 |    86 |    84 |    80 |
-|  18 | 麦天河 |    95 |    70 |    75 |    80 |
-|  19 | 韦金良 |    70 |    85 |    83 |    79 |
-|  20 | 贝俊霖 |    70 |    70 |    94 |    78 |
-|  21 | 陈颖聪 |    70 |    91 |    72 |    78 |
-|  22 | 郭榕荣 |    70 |    70 |    90 |    77 |
-|  23 | 梁泽文 |    70 |    70 |    88 |    76 |
-|  24 | 李耀武 |    70 |    80 |    76 |    75 |
-|  25 | 王海波 |    92 |    60 |    73 |    75 |
-|  26 | 陈梓鑫 |    70 |    70 |    81 |    74 |
-|  27 | 吴幸林 |    70 |    60 |    85 |    72 |
-|  28 | 张桂毓 |    70 |    82 |    63 |    72 |
-|  29 | 苏大明 |    70 |    60 |    82 |    71 |
-|  30 | 唐景富 |    70 |    70 |    74 |    71 |
-|  31 | 刘翔   |    89 |    60 |    65 |    71 |
-|  32 | 刘泽泉 |    70 |    81 |    62 |    71 |
-|  33 | 叶宇   |    70 |    60 |    80 |    70 |
-|  34 | 谢晓中 |    70 |    70 |    71 |    70 |
-|  35 | 陆宇轩 |    70 |    70 |    66 |    69 |
-|  36 | 李岳元 |    85 |    60 |    61 |    69 |
-|  37 | 周永久 |    70 |    70 |    64 |    68 |
-|  38 | 饶展源 |    70 |    60 |    71 |    67 |
-|  39 | 何晓东 |    70 |    70 |    60 |    67 |
-|  40 | 沈艺宏 |    70 |    60 |    69 |    66 |
-|  41 | 薛进超 |    70 |    60 |    68 |    66 |
-|  42 | 卢德涛 |    70 |    70 |    60 |    66 |
-|  43 | 岑法政 |    60 |    60 |    60 |    60 |
-
+#+NAME: rs
+| G | 姓名   | [[id:20240311T095545.158503][2023-09-06]] | [[id:20240311T095521.767719][2023-10-31]] | [[id:20240311T095501.465594][2023-12-26]] |
+|---+-------+------------+------------+------------|
+| 4 | 李吉   | 1          |         12 |          1 |
+| 3 | 段文潇 | 2          |          1 |          2 |
+| 5 | 黄飞超 | -          |         14 |          3 |
+| 5 | 许焕圣 | 7          |          6 |          4 |
+| 5 | 古远东 | 18         |          8 |          5 |
+| 5 | 黄可彬 | 19         |          9 |          6 |
+| 4 | 贝俊霖 | -          |          - |          7 |
+| 2 | 高旻昱 | 5          |          4 |          8 |
+| 5 | 肖义珥 | 10         |         11 |          9 |
+| 6 | 段京文 | 17         |         18 |         10 |
+| 5 | 郭榕荣 | -          |          - |         11 |
+| 2 | 刘虹佑 | 14         |          - |         12 |
+| 5 | 梁泽文 | -          |          - |         13 |
+| 5 | 何华为 | 8          |          7 |         14 |
+| 3 | 刘广鸿 | 11         |          3 |         15 |
+| 1 | 吴幸林 | -          |            |         16 |
+| 3 | 李泽俊 | -          |         15 |         17 |
+| 5 | 韦金良 | -          |         16 |         18 |
+| 1 | 苏大明 | -          |            |         19 |
+| 4 | 陈梓鑫 | -          |          - |         20 |
+| 4 | 叶宇   | -          |            |         21 |
+| 3 | 张甘霖 | 15         |          5 |         22 |
+| 1 | 余海中 | 3          |         17 |         23 |
+| 1 | 谭鑫   | 4          |         13 |         24 |
+| 2 | 李耀武 | -          |         21 |         25 |
+| 2 | 麦天河 | 6          |          - |         26 |
+| 3 | 唐景富 | -          |          - |         27 |
+| 4 | 王海波 | 9          |            |         28 |
+| 3 | 陈颖聪 | -          |         10 |         29 |
+| 3 | 饶展源 | -          |            |         30 |
+| 4 | 谢晓中 | -          |          - |         30 |
+| 1 | 沈艺宏 | -          |            |         32 |
+| 3 | 薛进超 | -          |            |         33 |
+| 3 | 段文锋 | 13         |          2 |         34 |
+| 1 | 陆宇轩 | -          |          - |         35 |
+| 1 | 刘翔   | 12         |            |         36 |
+| 6 | 周永久 | -          |          - |         37 |
+| 6 | 张桂毓 | -          |         19 |         38 |
+| 6 | 刘泽泉 | -          |         20 |         39 |
+| 1 | 李岳元 | 16         |            |         40 |
+| 4 | 何晓东 | -          |          - |         41 |
+| 4 | 卢德涛 | -          |          - |         42 |
+| 2 | 岑法政 |            |            |            |
 
