best_try_and_best_chance

--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -97,7 +97,7 @@ C/S架构编程，做完第一章所有的上机题:
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
 
 
-* 测验结果
+* 任务结果
 
 #+NAME: rs
 | G | 姓名   | [[id:20240311T095545.158503][2023-09-06]] | [[id:20240311T095521.767719][2023-10-31]] | [[id:20240311T095501.465594][2023-12-26]] |
