--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -88,7 +88,7 @@
 
 创建 helloworld、编译、运行，独立完成
 
-* 测验结果
+* 任务结果
 
 #+NAME: rs
 | 组 | 姓名   | [[id:20240311T095840.898164][2023-09-11]] | [[id:20240311T095853.809291][2023-10-30]] | [[id:20240311T095828.107998][2023-12-25]] |
