best_try_and_best_chance

--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -196,6 +196,32 @@
 
 {{{details(/)}}}
 
+*** 在控制台上，输出倒三角
+
+: *****
+: ****
+: ***
+: **
+: *
+
+实现思路:
+- 先写一个简单的循环，输出 N 行，每行一个 *
+- 尝试修改上述代码，输出 N 行，每行输出 M 个星
+- 再修改上述代码，让次循环中输出的星的个数跟当前行数关联
+
+{{{details{参考答案}}}}
+#+begin_src csx -n
+  for (int i = 0; i < 9; i++)
+  {
+      for (int j = 0; j < 9 - i; j++)
+      {
+          Console.Write("*");
+      }
+      Console.WriteLine();
+  }
+#+end_src
+{{{details(/)}}}
+
 *** 在控制台上，输出 99 乘法表
 
 : 1x1=1
