best_try_and_best_chance

--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -209,7 +209,7 @@
 - 尝试修改上述代码，输出 N 行，每行输出 M 个星
 - 再修改上述代码，让次循环中输出的星的个数跟当前行数关联
 
-{{{details{参考答案}}}}
+{{{details(参考答案)}}}
 #+begin_src csx -n
   for (int i = 0; i < 9; i++)
   {
