--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -74,6 +74,14 @@ GUI 程序 (Graphic User Interface):
 #+end_src
 {{{details(/)}}}
 
+接下来:
+- 练习实现 Winform 版的 BMI 计算器的步骤
+- 对上述 BMI 计算器进行优化，增加用户体验
+- 为上述 BMI 计算器，增加历史记录和历史显示功能
+  : [2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
+  : [2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
+  : [2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
+
 ** 2024-03-12 11:07:40
 
 记住: *Console.ReadLine 方法，返回的是一个字符串类型!!!*
