best_try_and_best_chance

--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -76,7 +76,7 @@ GUI 程序 (Graphic User Interface):
 
 接下来:
 - 练习实现 Winform 版的 BMI 计算器的步骤
-- 对上述 BMI 计算器进行优化，增加用户体验
+- 对上述 BMI 计算器进行优化，增加用户体验 (重点是错误处理)
 - 为上述 BMI 计算器，增加历史记录和历史显示功能
   : [2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
   : [2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
