best_try_and_best_chance

--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -79,8 +79,8 @@ GUI 程序 (Graphic User Interface):
 - 对上述 BMI 计算器进行优化，增加用户体验 (重点是错误处理)
 - 为上述 BMI 计算器，增加历史记录和历史显示功能
   : [2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
-  : [2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
-  : [2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
+  : [2012.3.13 12:20:35]  身高: 1.24   体重: 67   BMI: 32   状况: 肥胖
+  : [2015.2.5  11:20:35]  身高: 1.65   体重: 68   BMI: 23   状况: 健康
 
 ** 2024-03-12 11:07:40
 
