--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -34,9 +34,9 @@ GUI 程序 (Graphic User Interface):
 4. 完善交互逻辑
 
 从工具箱每一个拖进来的东西，都叫做一个 *控件*:
-- 实质上，一个控件就是一个 C# 类型的实例
+- 实质上，一个控件就是一个 C# 类型 (class Button/Label...) 的实例
 - 通过界面设计器，进行拖拽，实质上是 VS 帮助我们自动生成了一坨坨的代码
-- 每一个控件都有一个[Name]的属性，这个是控件的唯一引用ID。
+- 每一个控件都有一个 [Name] 的属性，这个是控件的唯一引用 ID。
   要养成一个好的习惯，就是将常用的控件，改一个合适的名字
 - MessageBox.Show 对应的是控制台项目中的 Console.Write
 
