best_try_and_best_chance

--- a/.src/191/index.org
+++ b/.src/191/index.org
@@ -22,7 +22,7 @@
 如果界面显示不是如此，那么两种方式:
 1. 从【菜单栏-视图】中找回相应的功能，通过拖拽方式恢复界面
 2. 从【菜单栏-窗口-重置窗口布局】的方式，恢复默认
-    
+
 Form1.ShowDialog 是打开模态窗口的意思，即在最顶层
 
 一个窗体，实质就是定义了一个 C# 的 Form 类型。对应的是三个文件:
@@ -30,7 +30,7 @@ Form1.ShowDialog 是打开模态窗口的意思，即在最顶层
 2. Form1.Designer.cs (界面设计器)
 3. Form1.resx (资源文件)
 
-partial, 一部分。分部类
+partial, 一部分。分部类 (课本第3页)
 
 参考代码:
 #+begin_src csx -n
