best_try_and_best_chance

--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -8,7 +8,7 @@
 * 笔记
 ** 2024-03-27 10:33:05
 
-一个窗体中有很多图形元素，这些成为控件 (Control)。
+一个窗体中有很多图形元素，这些称为控件 (Control)。
 
 一个控件，实际上对应 C# 中的一个类型的实例:
 #+begin_src csx
