--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -10,7 +10,8 @@
 关于跳动的心，需要掌握:
 - 如何通过 FormBorderStyle 设置无标题窗体
 - 如何通过 BackgroundImage 和 TransparentKey 设置不规则窗体
-- 如何通过 timer1 与 Location/Size 的配合，实现奇妙的互动行为
+- 如何通过 Timer 与 Location/Size 等的配合，实现奇妙的互动行为
+- 如何为窗体、控件绑定事件
 
 本节课:
 - 练习“跳动的心”
